syntax = "proto3";

package server.protoservices;
option go_package = ".;protoservices";

message RegisterRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
  }


message RegisterResponse {
    string user_id = 1;
  }

service RegisterService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
}